--- a/vue008.html
+++ b/vue008.html
@@ -8,12 +8,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>vue008</title>
 </head>
 <body>
-    
-    <audio controls>
-        <source src="http://awiclass.monoame.com/pianosound/set/1.wav" type="audio/ogg">
-    </audio>
+    <div class="" id="app">
+        <div class="audioplayer" v-for="s in sounddata">
+            <label for="">{{s.number}}</label>
+            <audio controls v-bind:data-num="s.number">
+                <source v-bind:src="s.url" type="audio/ogg">
+            </audio>
+        </div>
+    </div>
 </body>
 </html>
